Made some progress in making it look like bendo.github.io

--- a/docs/css/footer.css
+++ b/docs/css/footer.css
@@ -1,12 +1,12 @@
 footer {
-    position: absolute;
+    position: relative;
     text-align: center;
     bottom : 0;
     padding-bottom: .5rem;
   }
   
   .social-links {
-    position: absolute;
+    position: relative;
     text-align: center;
     bottom : 0;
     padding-left: 1rem;
