--- a/site/templates/head.html
+++ b/site/templates/head.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head profile="http://www.w3.org/2005/10/profile">
-    <meta charset="UTF-8">
-    <meta name="description" content="{{siteTitle}}">
-    <meta name="author" content="{{siteAuthor}}">
-    <meta name=viewport content="width=device-width, initial-scale=1">
- 
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/landing-page.css">
-    <link rel="stylesheet" href="/css/about-me.css">
-    <link rel="stylesheet" href="/css/experience.css">
-    <link rel="stylesheet" href="/css/education.css">
-    <link rel="stylesheet" href="/css/post-list.css">
-    <link rel="stylesheet" href="/css/post.css">
-    <link rel="stylesheet" href="/css/syntax.css">
-    <link rel="stylesheet" href="/css/footer.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>axiomsbane.github.io - $title$</title>
+    <link rel="stylesheet" href="/css/default.css" />
+    <link rel="stylesheet" href="/css/syntax.css" />
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' />
+  </head>
