--- a/site/templates/header.html
+++ b/site/templates/header.html
@@ -1,17 +1,11 @@
 <header>
-    <nav class="nav-grid">
-        <a id="home-btn" class="no-link" href="/">
-            <div id="home-text" class="btn"> Home </div>
-        </a>
-        <a id="posts-btn" class="no-link" href="/posts.html">
-          <span class="sum-mobile char">|</span>
-          <div id="posts-text" class="btn"> Posts </div>
-        </a>
-        <a id="about-me-btn" class="no-link" href="/aboutme.html">
-          <span class="sum-mobile char">|</span>
-          <div id="about-me" class="btn"> About Me </div>
-        </a>
-    </nav>
-
-    
+  <div class="logo">
+    <a href="/">axiomsbane.github.io</a>
+  </div>
+  <nav>
+    <a href="/posts.html">Posts</a>
+    <a href="/aboutme.html">About me</a>
+    <a href="/pages/resume.html">Resume</a>
+    <a href="/archive.html">Archive</a>
+  </nav>
 </header>
