--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -1,6 +1,12 @@
 {{>site/templates/head.html}}
 <body>
     {{>site/templates/header.html}}
-    
+    <!-- <main role="main">
+        <h1>{{title}}</h1>
+        <div> {{content}} </div>
+    </main> -->
+    <article class="main">
+        {{{content}}}        
+    </article>
 
 {{>site/templates/footer.html}}
