--- a/site/templates/post-list.html
+++ b/site/templates/post-list.html
@@ -1,7 +1,12 @@
-<ul>
-    {{#posts}}
-        <li>
-            <a href="{{url}}">{{title}} <span class="date">{{date}}</span> </a>
-        </li>
-    {{/posts}}
-</ul>
+{{>site/templates/head.html}}
+<body>
+    {{>site/templates/header.html}}
+    <ul>
+        {{#posts}}
+            <li>
+                <a href="{{url}}">{{title}} <span class="date">{{date}}</span> </a>
+            </li>
+        {{/posts}}
+    </ul>
+
+{{>site/templates/footer.html}}
