--- a/docs/css/syntax.css
+++ b/docs/css/syntax.css
@@ -1,32 +1,13 @@
-pre {
-    background-color: #F5FCFF;
-}
-
 code {
-    background-color: #F5FCFF;
-    color: #268BD2;
+    font-size: 13px;
+    background-color: rgb(250,250,250);
+    border: 1px solid rgb(200,200,200);
+    padding: 2px 4px;
 }
 
-/* KeyWordTok */
-.sourceCode .kw { color: #600095; }
-/* DataTypeTok */
-.sourceCode .dt { color: #268BD2; }
-
-/* DecValTok (decimal value), BaseNTok, FloatTok */
-.sourceCode .dv, .sourceCode .bn, .sourceCode .fl { color: #AE81FF; }
-/* CharTok */
-.sourceCode .ch { color: #37ad2d; }
-/* StringTok */
-.sourceCode .st { color: #37ad2d; }
-/* CommentTok */
-.sourceCode .co { color: #7E8E91; }
-/* OtherTok */
-.sourceCode .ot { color: #EB005B; }
-/* AlertTok */
-.sourceCode .al { color: #A6E22E; font-weight: bold; }
-/* FunctionTok */
-.sourceCode .fu { color: #333; }
-/* RegionMarkerTok */
-.sourceCode .re { }
-/* ErrorTok */
-.sourceCode .er { color: #E6DB74; font-weight: bold; }
+pre code {
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 1em;
+    overflow-x:auto;
+}
