--- a/site/templates/post-list.html
+++ b/site/templates/post-list.html
@@ -1,12 +1,17 @@
-{{>site/templates/head.html}}
-<body>
-    {{>site/templates/header.html}}
-    <ul>
-        {{#posts}}
-            <li>
-                <a href="{{url}}">{{title}} <span class="date">{{date}}</span> </a>
-            </li>
-        {{/posts}}
-    </ul>
+<ul>
+    {{#posts}}
+        <li class="post-item">
+            <a href="{{url}}" class="no-link post-link">
+              <div class="detail-container">
+                <span class="post-title">{{title}}</span>
 
-{{>site/templates/footer.html}}
+                {{#tags}}
+                <span class="tag" id="{{.}}">{{.}}</span>
+                {{/tags}}
+              </div>
+
+              <span class="list-date">{{date}}</span>
+            </a>
+        </li>
+    {{/posts}}
+</ul>
