--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -1,5 +1,9 @@
+:root {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
-    font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 400 16px/1.5 Arial, Helvetica, sans-serif;
     color: #111111;
     background-color: #fdfdfd;
     font-size: 16px;
