--- a/site/templates/header.html
+++ b/site/templates/header.html
@@ -4,6 +4,6 @@
   </div>
   <nav>
     <a href="/posts.html">Posts</a>
-    <a href="/pages/resume.html">Resume</a>
+    <a href="/resume.html">Resume</a>
   </nav>
 </header>
