--- a/site/css/default.css
+++ b/site/css/default.css
@@ -1,12 +1,17 @@
-:root {
-    font-family: Arial, Helvetica, sans-serif;
+/* @font-face {
+    font-family: Garamond;
+    src: url("../fonts/EBGaramond-Regular.ttf") format(truetype);
 }
 
+html {
+    font-family: Garamond;
+} */
+
 body {
-    font: 400 16px/1.5 Arial, Helvetica, sans-serif;
+    font: 400 16px/1.5 'EB Garamond', serif;
     color: #111111;
     background-color: #fdfdfd;
-    font-size: 16px;
+    font-size: 20px;
     margin: 0px auto 0px auto;
     line-height: 24px;
 }
