--- a/site/templates/head.html
+++ b/site/templates/head.html
@@ -7,6 +7,8 @@
     <title>axiomsbane.github.io - $title$</title>
     <link rel="stylesheet" href="/css/default.css" />
     <link rel="stylesheet" href="/css/syntax.css" />
+    <link rel="stylesheet" href="/css/post-list.css" />
+    <link rel="stylesheet" href="/css/post.css" />
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
