Tags prettified a little

--- a/site/templates/post-list.html
+++ b/site/templates/post-list.html
@@ -4,9 +4,9 @@
             <a href="{{url}}" class="no-link post-link">
               <div class="detail-container">
                 <span class="post-title">{{title}}</span>
-
+                <br>
                 {{#tags}}
-                <span class="tag" id="{{.}}">{{.}}</span>
+                <span class="post-tag" id="{{.}}">{{.}}</span>
                 {{/tags}}
               </div>
 
